# stm32-sdk

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml
.claude/commands/: build-all-templates.md  ci.md  fix.md  release-check.md  test-template.md
.github/workflows/: build.yml  stmtool.yml
docs/: build-flags.md  build-flags.ru.md  release.md  release.ru.md
docs/modules/: drivers.md  drivers.ru.md
sdk/cmake/: stm32_drivers.cmake  stm32_sdk.cmake
sdk/drivers/include/driver/: null_gpio.cppm
templates/bare-metal/blink/: main.cpp
tools/stmtool/: .flake8  pyproject.toml
tools/stmtool/stmtool/: __init__.py  cli.py  completions.py  config.py  i18n.py  project.py  sdk.py
tools/stmtool/tests/: conftest.py  test_cli_smoke.py  test_completion.py  test_config.py  test_project.py  test_sdk.py
