[tool.poetry]
name = "stmtool"
version = "0.0.0"
description = "CLI tool for STM32-SDK bare-metal projects"
authors = ["khosta77"]
readme = "../../README.md"
license = "MIT"
packages = [{ include = "stmtool" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = ">=0.9" }
rich = ">=13.0"
tomli = { version = ">=2.0", python = "<3.11" }

[tool.poetry.scripts]
stmtool = "stmtool.cli:app"

[build-system]
requires = ["poetry-core>=1.9", "poetry-dynamic-versioning>=1.4"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
